fdo#86852 correctly recognise NULL values in query parameter values dialog

Change-Id: I3c0cf976e0a9fbafe6eee768799a2f48c2ee0ea9